BUGFIX STYLE: Change switch active color to transparent for better visibility

--- a/Helium/gtk-4.0/_tauos.scss
+++ b/Helium/gtk-4.0/_tauos.scss
@@ -3983,7 +3983,7 @@ $colors: (
   color: $outline_variant;
 }
 .switch .negative.active {
-  color: $surface_bright_bg_color;
+  color: transparent;
 }
 .switch:disabled .negative {
   color: transparent;
